--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 </head>
 <body>
     
-    <h1>Curso de JavaScript</h1>
-    <p id="demostracion">Este texto sera transformado por JS</p>
-    <button onclick="document.getElementById('demostracion').innerHTML = 'texto transformado por js'">cambiar</button>
+    <a href="calculadora.html">Calculadora</a>
 </body>
 </html>
