--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     
-    <a href="calculadora.html">Calculadora</a>
+    <a href="../calculadora/calculadora.html">Calculadora</a>
+    <a href="../adivinador/adivinador.html">Adivinador</a>
 </body>
 </html>
